main.css
html {
  scroll-behavior: smooth;
}

#menu {
    position: fixed;
    top: 0px;
    background-color: #FFFDF4;   
    width: calc(100% - 96px);
    margin: 0px 48px 40px 48px; 
}

#footer {
    width: calc(100% - 96px);
    margin: 40px 48px 40px 48px;
    border-top: solid 1px #2b2b2b;
}


a:hover{
    opacity: 0.6;
}


body {
    margin: auto 0;
    display: block;
    background-color: #FFFDF4;

    font-family: Sora, sans-serif;
    font-style: normal;
    font-weight: 300;
    font-size: 1em;
    line-height: 1.5em;
    letter-spacing: 0.25px;
    color: #2b2b2b;
}

a {
    text-decoration: none;
    color: #2b2b2b;
}

img {
    max-width: 100%;
    /*margin-bottom: 80px;*/
}

img.no-margin {
    margin-bottom: 0px;
}

img.round-corner{
    border-radius:24px;
}

.video-mask {
    overflow: hidden;
    max-width: 720px;
    margin: auto;
}

video {
    border-radius: 24px;
}

.window {
    display: block;
    margin-left: 48px;
    margin-right: 48px;
    margin-top: 56px;
    margin-bottom: 24px;
    padding-top: 48px;
}

.container {
    display: flex;
    padding: 48px 0px 48px 0px;
    max-width: 1440px;
    margin: auto;
}

.flex-container {
    display: flex;
    flex-direction: row;
    padding: 48px 0px 48px 0px;
    max-width: 1440px;
    margin: auto;
}


.full-width {
    width: 100%;
    display: block;
}

.half-width {
    width: calc(50% - 12px);
    display: inline-block;
}

.col8-width {
    /*width: 66%;*/
    width: calc(66.7% - 3px);
    display: block;
    margin: auto;
}

.project-container {
    width: 100%;
    display:inline;
}


.project-box {
   width:32%;
   display: flex;
   margin:8px 8px 0;
   flex-flow: column;
}

.project-description {
    flex: 2;
}

.circle {
        border-radius: 50%;
        width: 32px;
        height: 32px;
        padding: 2px;
        /*background: #212121;*/
        border: 1px solid #212121;
        /*text-align: center;*/

        display: flex;
        justify-content: center;
        align-items: center;
    }

/* 3-column container */
/* container */
.padded-boxes {
    display:flex;
    flex-wrap:wrap;
    gap:2rem;
    margin-top: 4rem;
}

/* boxes */
.padded-boxes > * {
    width:100%;
    /*background:#eee;*/
}

/* headings */
.padded-boxes .heading {
    /*background:#f97171;*/
    /*margin:0;*/
    margin-bottom: 2rem;
    /*border-top-left-radius:.4rem;*/
    /*border-top-right-radius:.4rem;*/
}


/* tablet breakpoint */
@media (min-width:768px) {
    .padded-boxes > * {
        width:calc((100% - 4rem) / 3);
    }
}


.button-secondary {
    width:fit-content;
    border: 1px solid #2d2d2d;
    padding: 16px 24px;
    border-radius: 64px;
    transition-duration: 0.4s;
    
    font-family: Sora, sans-serif;
    font-style: normal;
    font-weight: 300;
    font-size: 1em;
    line-height: 1.25em;
    letter-spacing: 0.25px;
    text-decoration: none;
}

.button-secondary:hover {
    background-color: #2d2d2d;
    color: #ffffff;
    opacity: 100%;
    text-decoration: none;
}

.hover-image-div {
        position: relative;
        display: inline-block;
}

.hover-image-div .img-hover {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    /*z-index: 99;*/
}

.hover-image-div:hover .img-hover {
    display: inline;
}

/* Only mobile */
@media screen and (max-width: 768px) {
    .window {
        margin-left: 16px;
        margin-right: 16px;
    }
    
    .col8-width {
        width: 100%;
        display: inline-block;
    }

    .flex-container {
    display: flex;
    flex-direction: column;
    padding: 48px 0px 48px 0px;
    max-width: 1440px;
    margin: auto;
}
    
    .half-width {
        display: block !important;
        width: 100% !important;
    }
    
    .left {
        margin-right: 0px !important;
    }

    .right {
        margin-left: 0px !important;
    }
    
    .project-box {
        width: inherit;
    }
    
    #face {
        width: 40% !important;
    }
    
    #menu {
        margin-left: 16px;
        margin-right: 16px;
        width: calc(100% - 32px);
    }
    
    #footer {
        margin-left: 16px;
        margin-right: 16px;
        width: calc(100% - 32px);
    }
    
    .menu-list {
        padding-right: 24px !important;
    }
    
}

/* Only desktop */
@media screen and (min-width: 800px) {
    .project-column {
        flex: 1
    }
}


.menu-ul {
    list-style: none;
    background-color: #333;
    overflow: hidden;
    z-index: 2
}



.menu-ul a {    
    float: left;
    display: block;
    color: #f2f2f2;
    text-align: center;
    
    text-decoration: none;
    padding: 16px 40px 16px 0px;
    /*text style*/
    letter-spacing: 0.25px;
    color: #2b2b2b;
    font-family: Sora, sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 1em;
    line-height: 24px;
}


.menu-ul .icon {
    display: none;
    padding-top: 12px !important;
}


@media screen and (max-width: 768px) {
    .menu-ul {
        margin-left: 0px !important;
        margin-right: 0px !important;
        width: 100% !important;
    }
  .menu-ul a {
    display: none;
      padding-left: 16px !important;

    }
  .menu-ul a.icon {
    float: right;
    padding-right: 16px;
    display: block;
  }
}

/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
@media screen and (max-width: 768px) {
  .menu-ul.responsive {
      position: relative;
      margin: 0px !important;
      box-shadow: 0px 2px 16px 0px rgba(0, 0, 0, 0.2);
      
    }
    
  .menu-ul.responsive a.icon {
    position: absolute;
    right: 16px;
    top: 0;
  }
  .menu-ul.responsive a {
    padding: 16px 0px;
      float: none;
    display: block;
    text-align: left;
  }
}

.logo {
    width: 24px;
    height: 24px;
}

#face {
    width: 25%; 
    align-content: center;
    margin: auto;
}

.no-margin {
    margin: 0px;
}


.no-padding {
    padding: 0px;
}


.no-lineheight {
    line-height: normal;
}



.project-item-index {
    border-top: solid 2px #EB5757;
}



.left {
    margin-right: 12px;
    /*background-color: azure;*/
}

.text-vertical-center {
  text-align: left;
  position: relative;
  top: 50%;
  -ms-transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
}

.right {
    margin-left: 12px;
    /*background-color: burlywood;*/
    float: right;
    
}

.center {
    /*background-color: palevioletred;*/
    float: center;
    display: block;
    margin: auto;
}

.center-content {
    justify-content: center;
}


.index {
    border-bottom: solid 4px #EB5757;
    margin-right: 16px;
    margin-bottom: 24px;
    color: #2b2b2b;
    
    display: inline-flex;
    font-family: Sora, sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 3em;
    line-height: 2em;
}


.caption {
    font-size: .85em;
    font-family: Sora, sans-serif;
    font-weight: 300;
    letter-spacing: 0.25px;
    line-height: 1.5em;
    color: #909090;
    /*margin-top: -64px;*/
    /*margin-bottom: 80px;*/
    /*padding-top: 0px;*/
    text-align: center;
}

.align-center {
    text-align: center;
}

.regular {
    font-weight: 400 !important;
}

.italic {
    font-style: italic;
}

.hero {
    font-family: Sora, sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 4em;
    line-height: 1.25em;
    
    color: #2b2b2b;
}

.h1 {
    font-family: Sora, sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 3em;
    line-height: 1.25em;
    
    color: #2b2b2b;
}


.h2 {
    font-family: Sora, sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 2em;
    line-height: 1.25em;
    /* identical to box height, or 120% */
    /* letter-spacing: 0.15px; */
    color: #2b2b2b;
}


h3 {
    font-family: Sora, sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 1.5em;
    line-height: 2em;
    /* identical to box height, or 120% */
    /* letter-spacing: 0.15px; */
    color: #2b2b2b;
}

.compact {
    line-height: normal;
}

.bold {
    font-weight: 600 !important;
}

.regular {
    font-weight: 400 !important;
}

.light {
    font-weight: 300 !important;
}

.italic {
    font-style: italic;
}

.compact {
    line-height: 1.25em;
}

.underline {
  text-decoration-line: underline;
  text-decoration-style: dotted;
  text-decoration-color: grey;
  text-decoration-thickness: 2px;
  text-underline-offset: 0.25em;
}

.underline-wavy {
  text-decoration-line: underline;
  text-decoration-style: wavy;
  text-decoration-color: #2d2d2d;
  text-decoration-thickness: 1px;
  text-underline-offset: 0.25em;
}

strong {
  position: relative;
  font-weight: inherit;
}

strong::before {
  /* Highlight color */
  background-color: yellow;
  content: "";
  position: absolute;
  width: calc(100% + 4px);
  height: 80%;
  left: -2px;
  bottom: 0;
  z-index: -1;
  transform: rotate(-0.5deg);
}



.body-text {
    font-family: Sora, sans-serif;
    font-style: normal;
    font-weight: 300;
    font-size: 1.25em;
    line-height: 1.25em;
    /* or 150% */
    letter-spacing: 0.25px;
    color: #2b2b2b;
    /*column-count: 1;*/
}


.body-text2 {
    /*position: absolute;*/
    font-family: Sora, sans-serif;
    font-style: normal;
    font-weight: 300;
    font-size: 1em;
    line-height: 1.5em;
    /* or 150% */
    letter-spacing: 0.25px;

    /* Red */
    color: #2b2b2b;
    /*column-count: 1;*/
}

/* Contribution items */


.chip {
    /*border: 1px solid #2b2b2b;*/
    /*box-sizing: border-box;*/
    background-color: #f9f5ff;
    padding: 8px;
    display: inline-block;
    font-family: Sora, sans-serif;
    
    color: #a074ff !important;
    font-style: normal;
    font-weight: 400;
    font-size: 0.875em;
    letter-spacing: 0.15px;
    margin: 0px 0px 4px 0px;
    color: #2b2b2b;
}


.appstore {
    /*border: 1px solid #2b2b2b;*/
    /*box-sizing: border-box;*/
    border-radius: 4px;
    background-color: #000000;
    padding: 8px;
    display: inline-block;
    font-family: Sora, sans-serif;
    
    color: #ffffff !important;
    font-style: normal;
    font-weight: 400;
    font-size: 0.875em;
    letter-spacing: 0.15px;
    margin: 0px 0px 4px 0px;
    color: #2b2b2b;
}


@media screen and (max-width: 750px) {
    .img-width {
        width: 50%;
    }
}

